fix: wrong padding on next/back button. Changed it to margin

--- a/src/app/shared/pages/el-pollo-loco-project/el-pollo-loco-project.scss
+++ b/src/app/shared/pages/el-pollo-loco-project/el-pollo-loco-project.scss
@@ -96,7 +96,7 @@
   gap: 8px;
   align-items: center;
   max-width: 200px;
-  padding: 24px 0 0 48px;
+  margin: 24px 0 0 48px;
   font-weight: 700;
   transition: transform 0.2s ease;
 
@@ -114,7 +114,7 @@
   align-items: center;
   justify-content: flex-end;
   margin-left: auto;
-  padding: 48px 0px 0 0;
+  margin-top: 48px;
   max-width: 200px;
   font-weight: 700;
   transition: transform 0.2s ease;
@@ -128,12 +128,8 @@
 }
 
 h2,
-p,
-a {
+.blend,
+p {
   mix-blend-mode: difference;
   color: var(--color-primary);
-}
-
-img {
-  mix-blend-mode: normal;
 }
